[package]
name = "photoview"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libvips = "*"
include_dir = "*"
async-std = { version = "*", features = ["attributes"] }
tide = "*"
env_logger = "*"

[[bin]]
name = "photoview"
path = "src/main.rs"
